PUBSTWO-1647 testing, bug fix & replace Arrays.asList w/List.of